project_sources/collector/fixtures/powershell_analysis/good/custom_catch_rethrows.ps1
try {
    throw "fixture failure"
} catch {
    Write-Warning $_
    throw
}
