project_sources/collector/fixtures/powershell_analysis/bad/swallowed_catch.ps1
try {
    throw "fixture failure"
} catch {
    Write-Warning $_
}
